tests/syntax_error/bad_struct_field_name.jou
struct 1:  # Error: expected a name for the struct, got an integer
    bla bla
